--- a/index.Rmd
+++ b/index.Rmd
@@ -33,6 +33,7 @@ I have completed a PhD research at [the Department of Linguistics and English La
 My CV can be downloaded [here](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Takayuki_Nagamine_CV.pdf) (last updated: 01 November 2024).
 
 Also follow me on:&nbsp;&nbsp;<a href='https://researchmap.jp/takayukinagamine' target='_blank'><img title='researchmap' alt='researchmap' src='https://researchmap.jp/outline/img/researchmap130.gif' border="0"/></a> 
+<a href='https://profiles.ucl.ac.uk/99585-takayuki-nagamine' target='_blank'><img title='twitter' alt='twitter' src='https://img.icons8.com/?size=40&id=9887&format=png&color=000000' /></a> 
 <a href='https://bsky.app/profile/takayukinagamine.bsky.social' target='_blank'><img title='twitter' alt='twitter' src='https://img.icons8.com/?size=50&id=Pmova64LnA5E&format=png&color=228BE6' /></a> 
 <a href='https://github.com/TakayukiNagamine' target='_blank'><img title='github' alt='github' src='https://img.icons8.com/ios-filled/40/null/github.png' /></a> 
 <a href="https://orcid.org/0000-0002-0936-4738">
