--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ I am a Postdoctoral Research Fellow in [Speech, Hearing and Phonetic Sciences (S
 I have completed a PhD research at [the Department of Linguistics and English Language, Lancaster University ](https://www.lancaster.ac.uk/linguistics/). I investigated acoustic/articulatory dynamics of L2 English liquids produced by L1 Japanese speakers using ultrasound tongue imaging and quantitative data analysis methods. My PhD project was funded by [Japan Student Services Organisation (JASSO)](https://www.jasso.go.jp/ryugaku/scholarship_a/daigakuin/index.html) and [The Murata Science Foundation](https://corporate.murata.com/ja-jp/group/zaidan). 
 
 
-My CV can be downloaded [here](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Takayuki_Nagamine_CV.pdf) (last updated: 01 November 2024).
+Download my CV [here](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Takayuki_Nagamine_CV.pdf) (last updated: 21 December 2024).
 
 Also follow me on:&nbsp;&nbsp;<a href='https://researchmap.jp/takayukinagamine' target='_blank'><img title='researchmap' alt='researchmap' src='https://researchmap.jp/outline/img/researchmap130.gif' border="0"/></a> 
 <a href='https://profiles.ucl.ac.uk/99585-takayuki-nagamine' target='_blank'><img title='twitter' alt='twitter' src='https://img.icons8.com/?size=40&id=9887&format=png&color=000000' /></a> 
