--- a/research.Rmd
+++ b/research.Rmd
@@ -98,9 +98,9 @@ I am involved in projects investigating language variation and change using arti
 
 ### Journal article
 
-- Nance, C., Dewhurst, M., Fairclough, L., Forster, P., Kirkham, S., Lo, J., McMonagle, J., **Nagamine, T.**, Parkman, S., Rabani, H., Siem, A. B., Turton D., & Wang, S. (Forthcoming.) Articulatory phonetics in the Market: Combining public engagement with ultrasound data collection. *Linguistics Vanguard*. (Lancashire Tongues)
+- Nance, C., Dewhurst, M., Fairclough, L., Forster, P., Kirkham, S., Lo, J., McMonagle, J., **Nagamine, T.**, Parkman, S., Rabani, H., Siem, A. B., Turton D., & Wang, S. (2024) Articulatory phonetics in the Market: Combining public engagement with ultrasound data collection. *Linguistics Vanguard*, 1-12. [https://doi.org/10.1515/lingvan-2024-0020](https://doi.org/10.1515/lingvan-2024-0020). [[osf]](https://osf.io/ky3cz/) (Lancashire Tongues)
 
-- Strycharczuk, P., Kirkham, S., Gorman, E., & **Nagamine, T**. (2024). Towards a dynamical model of English vowels: Evidence from diphthongisation. *Journal of Phonetics, 107*,  Article 101349. [https://doi.org/10.1016/j.wocn.2024.101349](https://doi.org/10.1016/j.wocn.2024.101349)  [[pdf]](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/strycharczuk_et_al_2024.pdf) [[code]](https://osf.io/gub32/) (TARDIS) <br> (&copy; 2024 Author(s). This article is distributed under a Creative Commons Attribution (CC BY) License.)
+- Strycharczuk, P., Kirkham, S., Gorman, E., & **Nagamine, T**. (2024). Towards a dynamical model of English vowels: Evidence from diphthongisation. *Journal of Phonetics, 107*,  Article 101349. [https://doi.org/10.1016/j.wocn.2024.101349](https://doi.org/10.1016/j.wocn.2024.101349)  [[pdf]](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/strycharczuk_et_al_2024.pdf) [[osf]](https://osf.io/gub32/) (TARDIS) <br> (&copy; 2024 Author(s). This article is distributed under a Creative Commons Attribution (CC BY) License.)
 
 
 ### Conference proceedings paper
