--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -31,30 +31,40 @@ body, td {
   - Seminar tutor: 3rd year UG, Lancaster University (2023/24)
 
   - Ten seminars on theoretical topics in phonetics and phonology
+  
+  - Main responsibilities include: delivering small group seminars, holding weekly office hours, responding to queries from students, and marking and providing feedback on coursework essays
 
 - **LING327 Advanced English Phonetics** 
 
   - Seminar tutor: 3rd year UG, Lancaster University (2023/24)
 
   - Ten seminars on topics on acoustic and auditory phonetics
+  
+  - Main responsibilities include: delivering small group seminars, holding weekly office hours, responding to queries from students (including discussing project ideas for their experimental phonetics coursework projects), and marking and providing feedback on coursework essays
 
 - **LING103 Linguistics** 
 
   - Lecturer: 1st year UG, Lancaster University (2022/23)
 
   - Six lectures on introductory Phonetics/Phonology and Japanese Phonetics/Phonology
+  
+  - Main responsibilities include: writing and delivering lectures, writing seminar materials and guidance for associate lecturers, holding weekly office hours, responding to queries from students, and developing/marking online quizzes. 
 
 - **LING221 Sounds of the world's languages** 
 
   - Seminar tutor: 2nd year UG, Lancaster University (2022-24)
 
   - Ten seminars on theoretical issues in Phonetics and acoustic analysis using Praat
+  
+  - Main responsibilities include: delivering small group seminars, holding weekly office hours, responding to queries from students, and marking and providing feedback on coursework essays
 
 - **LING223 English Phonetics** 
 
   - Seminar tutor: 2nd year UG, Lancaster University (2021/22)
 
   - Ten seminars on articulatory and acoustic phonetics of English sounds
+  
+  - Main responsibilities include: delivering small group seminars, holding weekly office hours, responding to queries from students, and marking and providing feedback on coursework essays
 
 - **English Phonetics** 
 
@@ -84,7 +94,7 @@ body, td {
 
 ## **English for Academic Purposes (EAP)**
 
-In September 2023, I served as a tutor on the English for Academic Purposes (EAP) course at Lancaster University. I tutored 13 incoming postgraduate students and was responsible for delivering teaching, one-to-one tutoring, marking essays and providing detailed feedback on their writing. Key topics of the course include:
+In September 2023, I served as a tutor on the English for Academic Purposes (EAP) course at Lancaster University. I tutored 13 incoming postgraduate students and was responsible for delivering classroom teaching, weekly one-to-one tutoring, marking essays and providing detailed feedback on their writing. Key topics of the course include:
 
   - Academic Reading and Writing: critical thinking, academic integrity, referencing, paragraph structure
   
